# bcv-backend

./: .env  .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: book_info.rs  file_path_config.rs  lib.rs  mod.rs  path_info.rs  post.rs  prelude.rs  secret_info.rs  user.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20241202_113447_create_table.rs  m20241203_120431_create_table.rs  m20241210_120723_create_table.rs  m20241210_125348_insert_data.rs  m20241231_133646_create_table.rs  m20250108_084238_create_table_path_info.rs  m20250113_031544_update_book_info_add_cloumn.rs  m20250116_112246_create_table_file_path_config.rs  m20250116_113825_apply_data_file_path_config.rs
pojo/: Cargo.toml
pojo/src/book/: book.rs
service/: Cargo.toml
service/src/: app_data.rs  global_data.rs  lib.rs  mutation.rs
service/src/base/: mod.rs  path_info.rs
service/src/book/: book.rs  mod.rs
service/src/comic/: comic.rs  mod.rs
service/src/local_file_storage/: file_info.rs  file_storage.rs  mod.rs
service/src/login/: login.rs
utils/: Cargo.toml
utils/src/: err.rs  lib.rs  page.rs  res.rs  token.rs  user_info.rs  zip_read.rs
web/: Cargo.toml  config.toml
web/src/: app_data.rs  auth.rs  config.rs  configure.rs  hello.rs  log.rs  main.rs  test_route.rs
web/src/book/: book.rs  mod.rs  route.rs
web/src/comic/: comic.rs  mod.rs  route.rs
web/src/login/: login.rs  mod.rs  route.rs
