[workspace]
resolver = "2"
members = [
    "web",
    "utils"
]

[workspace.package]
edition = "2021"
authors = ["hpc"]

[workspace.dependencies]
utils = { path = "utils" }
actix-web = "4.9.0"
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.133"
actix-multipart = "0.7.2"
derive_more = { version = "1.0.0", features = ["full"]}

[profile.dev]
debug = 0

[profile.release]
opt-level = 3
