[workspace]
resolver = "2"
members = [
    "web",
    "utils"
]

[workspace.package]
edition = "2021"
authors = ["hpc"]

[workspace.dependencies]
utils = { path = "utils" }
actix-web = "4.9.0"
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.133"
actix-multipart = "0.7.2"
derive_more = { version = "1.0.0", features = ["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tracing-appender = "0.2"
futures = "0.3"
futures-util = "0.3"
actix-http = "3"

[profile.dev]
debug = 0

[profile.release]
opt-level = 3
