[workspace]
resolver = "2"
members = [
    "web",
    "utils",
    "entity",
    "migration", 
    "service", 
    "pojo"]

[workspace.package]
edition = "2021"
authors = ["hpc"]

[workspace.dependencies]
service = { path = "service" }
entity = { path = "entity" }
pojo = { path = "pojo" }
migration = { path = "migration" }
utils = { path = "utils" }
actix-web = "4"
serde = "1"
serde_derive = "1"
serde_json = "1"
actix-multipart = "0.7"
derive_more = { version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tracing-appender = "0.2"
futures = "0.3"
futures-util = "0.3"
actix-http = "3"
sea-orm = { version = "1.1", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print" ] }
actix-web-httpauth = "0.8"
jsonwebtoken = "9"
chrono = "0.4"
crypto = { version = "0.5", features = ["digest"]}
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
argon2 = "0.5.3"

[profile.dev]
debug = 0

[profile.release]
opt-level = 3
