[package]
name = "service"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
utils = { workspace = true }
entity = { workspace = true }
pojo = { workspace = true }
sea-orm = { workspace = true }
crypto = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
argon2 = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
actix-multipart = { workspace = true }
serde = { version = "1.0.215", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }
