[package]
name = "utils"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
derive_more = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }