[package]
name = "web"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
# utils = { path = "../utils" }
utils = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
actix-multipart = { workspace = true }