[package]
name = "web"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
# utils = { path = "../utils" }
service = { workspace = true }
entity = { workspace = true }
pojo = { workspace = true }
migration = { workspace = true }
utils = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
actix-multipart = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
actix-http = { workspace = true }
sea-orm = { workspace = true }
actix-web-httpauth = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
